--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -17248,3 +17248,27 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/287756409/
         dtstart: 2022-08-17 18:00:00+02:00
         dtend: 2022-08-17 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Tech Community Summer Gathering
+        description: 'Productboard Meetups
+
+          Wednesday, August 17 at 6:00 PM
+
+
+          Productboard has been quietly growing our Brno presence for the last few months and we really enjoyed meeting the tech community.We want to continue o...
+
+
+          https://www.meetup.com/productboard-meetups/events/287756409/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287756409@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287756409/
+        dtstart: 2022-08-17 18:00:00+02:00
+        dtend: 2022-08-17 21:00:00+02:00
