--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -3198,27 +3198,30 @@ series:
         dtstart: 2022-08-17 19:00:00+02:00
         dtend: 2022-08-17 23:59:00+02:00
   - meetupcom:
-      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Wed, Sep 21, 2022, 7:00 PM   | Meetup'
+      meta_description: 'Pyvo bude i v září! Můžete se těšit na prezentaci na téma Distribuované databáze a určitě dojde i na lightning talky. Potkáme se v restauraci Botič.
+
+
+        We meet up in Septembe'
+      og_title: 'Pyvo Prague #136 Distributed Databases, Wed, Sep 21, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcmbcc/
       ical:
-        summary: 'Pyvo Prague #'
+        summary: 'Pyvo Prague #136 Distributed Databases'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, September 21 at 7:00 PM
 
 
-          We will meet for an informal chat about Python, programming, and more. Details will be added.
+          Pyvo bude i v září! Můžete se těšit na prezentaci na téma Distribuované databáze a určitě dojde i na lightning talky. Potkáme se v restauraci Botič. W...
 
 
-          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcmbcc/'
-        location: Prague (, Prague, Czech Republic)
+          https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/'
+        location: Botič Restaurant (Nuselská 159/114, Praha 4-Michle, Czech Republic 140 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_bcxlssydcmbcc@meetup.com
-        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcmbcc/
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/
         dtstart: 2022-09-21 19:00:00+02:00
         dtend: 2022-09-21 23:59:00+02:00
   - meetupcom:
@@ -9760,6 +9763,29 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcqbcc/
         dtstart: 2022-12-21 19:00:00+01:00
         dtend: 2022-12-21 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #135 - Summer Barbecue Edition'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, August 17 at 7:00 PM\n
+
+          Máme léto a s ním tradičně odlehčený program. Opět se potkáme v kavárně volnočasového centra H55. (https://www.h55.cz/) Tentokrát bude before-party od...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/286984336/'
+        location: Volnočasové centrum H55 (Hloubětínská 1138/5, Praha-Praha 14, Czech Republic 198 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydclbwb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/286984336/
+        dtstart: 2022-08-17 19:00:00+02:00
+        dtend: 2022-08-17 23:59:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
