--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -10417,11 +10417,9 @@ series:
         dtstart: 2022-08-30 18:30:00+02:00
         dtend: 2022-08-30 19:30:00+02:00
   - meetupcom:
-      meta_description: '**Talk Summary**
-
-        Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much bigg'
-      og_title: Building a Distributed Database With the Raft Replication Algorithm, Thu, Sep 15, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/288203639/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Building a Distributed Database With the Raft Replication Algorithm
         description: 'TypeDB Prague Engineers
@@ -11388,3 +11386,32 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287924523/
         dtstart: 2022-09-13 18:30:00+02:00
         dtend: 2022-09-13 19:30:00+02:00
+  - meetupcom:
+      meta_description: '**Talk Synopsis**
+
+        Developing with graph databases has a number of challenges, such as the modelling of complex schemas, and maintaining data consistency in your database.
+
+
+        '
+      og_title: Graph Databases vs TypeDB | What You Can't do With Graphs, Thu, Oct 20, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/288455635/
+      ical:
+        summary: Graph Databases vs TypeDB | What You Can't do With Graphs
+        description: 'TypeDB Prague Engineers
+
+          Thursday, October 20 at 6:30 PM
+
+
+          **Talk Synopsis**Developing with graph databases has a number of challenges, such as the modelling of complex schemas, and maintaining data consistenc...
+
+
+          https://www.meetup.com/typedb-prague/events/288455635/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288455635@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/288455635/
+        dtstart: 2022-10-20 18:30:00+02:00
+        dtend: 2022-10-20 19:30:00+02:00
