--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -29105,3 +29105,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/286584467/
         dtstart: 2022-06-25 09:00:00+02:00
         dtend: 2022-06-25 18:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Den otevřených dveří aneb navštiv doupě ajťáků!
+        description: 'Become a software developer from 0
+
+          Saturday, June 25 at 9:00 AM
+
+
+          Vyzkoušej si jaké to je být jeden den studentem Green Fox Academy. Připravili jsme pro tebe den nabitý programováním a informacemi. Registruj se přede...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/286584467/'
+        location: Green Fox Academy (Václavské nám. 11, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286584467@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/286584467/
+        dtstart: 2022-06-25 09:00:00+02:00
+        dtend: 2022-06-25 18:00:00+02:00
