--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -9911,11 +9911,9 @@ series:
         dtstart: 2022-08-18 18:30:00+02:00
         dtend: 2022-08-18 19:30:00+02:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies '
-      og_title: Comparing Semantic Web Technologies to TypeDB, Tue, Sep 20, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/287924630/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Comparing Semantic Web Technologies to TypeDB
         description: 'TypeDB Prague Engineers
@@ -11751,3 +11749,29 @@ series:
         url: https://www.meetup.com/typedb-prague/events/288203639/
         dtstart: 2022-09-15 18:30:00+02:00
         dtend: 2022-09-15 19:30:00+02:00
+  - meetupcom:
+      meta_description: '**Talk Synopsis**
+
+        Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity al'
+      og_title: TypeDB Academy | Modelling Principles, Tue, Dec 6, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/288456873/
+      ical:
+        summary: TypeDB Academy | Modelling Principles
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, December 6 at 6:30 PM
+
+
+          **Talk Synopsis**Join the (https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity...
+
+
+          https://www.meetup.com/typedb-prague/events/288456873/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288456873@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/288456873/
+        dtstart: 2022-12-06 18:30:00+01:00
+        dtend: 2022-12-06 19:30:00+01:00
