--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -25091,14 +25091,9 @@ series:
         dtstart: 2022-09-21 09:00:00+02:00
         dtend: 2022-09-21 10:00:00+02:00
   - meetupcom:
-      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
-
-        https://www.datascript.cz/morning-talks/rest-is-best-nebo-za-trest/
-
-
-        V dnešní době se rozmohl takový nešvar naz'
-      og_title: REST is BEST, nebo za TREST?, Thu, Sep 22, 2022, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/288152830/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: REST is BEST, nebo za TREST?
         description: 'Morning Talks
@@ -26745,3 +26740,32 @@ series:
         url: https://www.meetup.com/morning-talks/events/288152824/
         dtstart: 2022-09-21 09:00:00+02:00
         dtend: 2022-09-21 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/
+
+
+        V posledních letech se roztrhl pytel '
+      og_title: Návrh systému na pevném základu, Wed, Oct 19, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/288152852/
+      ical:
+        summary: Návrh systému na pevném základu
+        description: 'Morning Talks
+
+          Wednesday, October 19 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/ V posledních lete...
+
+
+          https://www.meetup.com/morning-talks/events/288152852/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152852@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152852/
+        dtstart: 2022-10-19 09:00:00+02:00
+        dtend: 2022-10-19 10:00:00+02:00
