--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -29249,3 +29249,51 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/288521321/
         dtstart: 2022-09-21 18:00:00+02:00
         dtend: 2022-09-21 20:00:00+02:00
+  - meetupcom:
+      meta_description: Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu i platformou Salesforce. Navíc získáš představu o tom, jak
+      og_title: 'Online workshop: Základy programování, Tue, Oct 11, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/prague-junior-software-developer-course/events/288644328/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Tuesday, October 11 at 6:00 PM
+
+
+          Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu i platformou Salesforce. Navíc získá...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/288644328/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288644328@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/288644328/
+        dtstart: 2022-10-11 18:00:00+02:00
+        dtend: 2022-10-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
+        description: 'Become a software developer from 0
+
+          Wednesday, September 21 at 6:00 PM
+
+
+          Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš v tom, co je low-code, pro-code a no-code? Přemýšlíš, že bys začal/a splácet školné až po...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/288521321/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288521321@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/288521321/
+        dtstart: 2022-09-21 18:00:00+02:00
+        dtend: 2022-09-21 20:00:00+02:00
