--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -9022,3 +9022,24 @@ series:
         url: https://www.meetup.com/praguerb/events/287907297/
         dtstart: 2022-09-07 19:00:00+02:00
         dtend: 2022-09-07 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, September 7 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/287907297/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcmbkb@meetup.com
+        url: https://www.meetup.com/praguerb/events/287907297/
+        dtstart: 2022-09-07 19:00:00+02:00
+        dtend: 2022-09-07 22:00:00+02:00
