--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -17761,9 +17761,9 @@ series:
         dtstart: 2022-08-08 18:00:00+02:00
         dtend: 2022-08-08 20:00:00+02:00
   - meetupcom:
-      meta_description: '*How to write award-winning documentation? How to get buy-in for UX Writing in your company? What to expect from your UX Writer? And what is the difference in the UX Writin'
-      og_title: 'UX Monday: From UX Writers with love, Mon, Oct 3, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/288724253/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'UX Monday: From UX Writers with love'
         description: 'Asociace UX
