--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -29028,3 +29028,27 @@ series:
         url: https://www.meetup.com/protest_cz/events/288008397/
         dtstart: 2022-09-06 18:00:00+02:00
         dtend: 2022-09-06 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 109. [pro:]TEST! meetup – QA chapter lead s Markem Braunem
+        description: '[pro:]TEST!
+
+          Tuesday, September 6 at 6:00 PM
+
+
+          **Anotace přednášky** Podíváme se na to, kdo je to QA Chapter Leader. Proč je taková role potřeba a proč přemýšlet o škálování jak z pohledu businessu...
+
+
+          https://www.meetup.com/protest_cz/events/288008397/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288008397@meetup.com
+        url: https://www.meetup.com/protest_cz/events/288008397/
+        dtstart: 2022-09-06 18:00:00+02:00
+        dtend: 2022-09-06 19:00:00+02:00
